# $Id$

2005-09-30	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Base/Timestamp.class.php: useful compare method added.

* core/Base/DateRange.class.php: useless compare method removed.

2005-09-28	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Base/DateRange.class.php: contains, split methods added.

2005-09-27	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/UnifiedContainer.class.php: correct fetch() behaviour.

2005-09-27	Anton E. Lebedevich	<noiselist@pochta.ru>

* main/Utils/LogicUtils.class.php: corrected conditions.

* core/Base/DateRange.class.php: compare, overlaps methods added.

2005-09-24	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* main/DAOs/UnifiedContainer.class.php: do not throw ObjectNotFoundException
on empty lists.

2005-09-23	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* 0.2.2 released.

* main/Utils/LogicUtils.class.php: new place for common used logic patterns.

2005-09-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* core/Base/: added delimiters for date'n'time-related stringoization methods,
Time.class.php introduced.

* core/DB/DBTransaction.class.php: extremly evil typo fixed, so now
transaction doesn't start every time you're adding new Query to it.

* core/OSQL/PreQuery.class.php: obsoleted, will be removed at 0.2.5.

* main/DAOs/: UnifiedContainer and friends ported to ObjectQuery from
obsoleted PreQuery.

2005-09-20	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Base/NamedObject.class.php: added static compareNames() for using in
usort().

2005-09-17	Konstantin V. Arkhipov	<voxus@shadanakar.org>

* doc/sample: synced with Form's related changes.

* core/Form/FiltrablePrimitive.class.php: setFilter() removed.

2005-09-16	Anton E. Lebedevich	<noiselist@pochta.ru>

* core/Form/FiltrablePrimitive.class.php: introduced display and import
filters chain.

* core/Form/HTMLFilter.class.php, core/Form/TextFilter.class.php: removed in
favour of filter' chains.

* core/Form: added more basic filters.
